# neuralCpp

./: CMakeLists.txt  LICENSE  README.md
src/: main  main.cpp  main.cpp.bak
src/Utils/: Utils.h
src/impl/: Dataset.cpp  INTERACTIVE.cpp  MNISTTEST.cpp  MatMaths.cpp  Model.cpp  Weights.cpp  XORTEST.cpp
src/include/: Dataset.h  MatMaths.h  Model.h  Weights.h
src/research/: RESEARCH.cpp
